--- a/ch03/css/nav2.css
+++ b/ch03/css/nav2.css
@@ -1,31 +1,26 @@
-#container{width: 1000px;}
-*{
-    margin: 0 auto;
-}
-ul{
-    list-style: none;
-    text-align: right;
-    margin-right: 100px ;
-    
+*{margin: 0; padding: 0;}
+#container{
+    width: 1000px; margin: 0 auto;
 }
 nav{
     width: 90%; height: 80px;
     background: #006699;
-    
+}
+ul{
+    list-style: none;
+    text-align: right;
+    margin-right: 100px;
 }
 ul li{
     display: inline-block;
     margin: 20px;
-    padding: 10px;
+    padding: 10px 0;
 }
 a{
     text-decoration: none;
-    color: white;
+    color: #fff;
 }
 a:hover{
-    color: yellow;
+    color: yellowgreen;
 }
-section h1{
-    margin-top: 20px;
-    margin-left: 10px;
-}
+section{margin: 20px;}
