--- a/shared/WebSite_andiframe/index.css
+++ b/shared/WebSite_andiframe/index.css
@@ -43,7 +43,9 @@ nav ul li a:hover{
 
 /* 왼쪽 사이드 메뉴 */
 aside#left{
+    /*   */
     float:left;
+    /* em단위가 글자만큼 ex)1em=한글자만큼 */
     width: 10em;
     margin-right: 1em;
 }
