--- a/ch04/css/pet.css
+++ b/ch04/css/pet.css
@@ -16,7 +16,6 @@ header #logo{
 #logo:hover{background-color: #2fb2fd;}
 header h1{
     color : #fff;
-    padding-left: 20px;
     text-decoration: none;
 }
 header nav{
@@ -24,10 +23,8 @@ header nav{
     line-height: 80px;
     margin-right: 50px;
 }
-nav ul{list-style: none;}
-nav ul li{
-    float:right;
-}
+nav ul{list-style: none; margin-right: -200px;}
+nav ul li{float:right;}
 a{
     display: block;
     padding: 0px 8px;
