--- a/dream_jeju/css/style.css
+++ b/dream_jeju/css/style.css
@@ -1,3 +1,5 @@
+/* web font 구글폰트꺼임 */
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@500&display=swap');
 /* 전체 스타일 */
 *{margin: 0;padding: 0;}
 /* 16:9 화면상 1600px로 설정 */
@@ -7,7 +9,7 @@ main{width: 1200px; margin: 0 auto;box-sizing: border-box;}
 /* header영역 스타일 */
 header{height: 80px; background-color: rgb(9, 103, 9);}
 header #logo{width: 300px; float: left;padding-left: 30px;line-height: 80px;}
-#logo h1 a{color: orange;text-decoration: none;}
+#logo h1 a{color: orange;text-decoration: none;font-family: 'Merienda', cursive;}
 nav{
     width: 800px;   
     line-height: 80px;
@@ -72,3 +74,30 @@ footer #bottomMenu{list-style: none; padding: 20px;}
     border-collapse: collapse;
     padding: 10px 20px;
 }
+
+/* q & a 스타일 */
+#board section h2{margin: 30px 10px; text-align: center;}
+#board #tbl_board{border: 1.5px solid rgb(2, 154, 2);
+border-collapse: collapse; width: 700px; margin: 0 auto 20px auto;}
+#tbl_board thead{background-color: beige;}
+#tbl_board td:nth-child(1),
+td:nth-child(3), td:nth-child(4){text-align: center;}
+#tbl_board td:nth-child(1){width: 50px;}
+.btn{text-align: right; margin-right: 250px;}
+.btn button{padding: 10px 15px;margin-bottom: 50px;}
+
+
+/* aboutme 스타일 */
+#about-main{margin: 0; padding: 0;}
+#bg-aboutme{
+    width: 200px; 
+    height: 300px;
+    background: url("../images/aboutme.jpg") no-repeat;
+    background-size: cover
+    ;border: 1px solid black;
+    border-radius: 8px;
+    float: left;
+}
+
+#about-middle{float: none;}
+
