--- a/dream_jeju/css/style.css
+++ b/dream_jeju/css/style.css
@@ -88,16 +88,23 @@ td:nth-child(3), td:nth-child(4){text-align: center;}
 
 
 /* aboutme 스타일 */
-#about-main{margin: 0; padding: 0;}
+#about-main{margin: 0 auto; padding: 0;}
 #bg-aboutme{
-    width: 200px; 
+    width: 220px; 
     height: 300px;
     background: url("../images/aboutme.jpg") no-repeat;
-    background-size: cover
-    ;border: 1px solid black;
+    background-size: cover;
+    border: 1px solid black;
     border-radius: 8px;
+    margin-right: 20px;
     float: left;
 }
-
 #about-middle{float: none;}
+.top-section p{margin-top: 40px;}
+.top-section{border-bottom: 1px solid #555;padding-bottom: 50px;}
+.top-section a{text-decoration: black;}
+.top-section a:visited{text-decoration: none; color:black}
+.top-section a:hover{color: blue;}
+#about-middle{line-height: 3em;border-bottom: 1px solid #555;padding-bottom: 40px;}
+#about-bottom{line-height: 3em;}
 
